--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,3 +1,9 @@
-.App {
+.app {
+    width: 100%;
+    min-height: 100vh;
+    background-color: var(--clr-grey-2);
+}
 
+.router-link {
+    text-decoration: none;
 }
