--- a/src/client/components/styling/competition.css
+++ b/src/client/components/styling/competition.css
@@ -1,5 +1,5 @@
-.single-competition,
-.single-season {
+.competition-page,
+.season-page {
     width: 100%;
     padding-top: 3rem;
     display: flex;
@@ -7,27 +7,20 @@
     align-items: center;
 }
 
-.competition-title {
+.competition-page > h1,
+.season-page > h1 {
     font-size: 5rem;
     font-weight: 400;
 }
 
-.current-season-title {
+.competition-page > h2,
+.season-page > h2 {
     font-size: 2.5rem;
     font-weight: 300;
-    padding-bottom: 10px;
+    color: var(--clr-black-2)
 }
 
-.single-competition button {
-    padding: 20px 50px;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    transition-duration: 0.2s;
-    text-transform: uppercase;
-}
-
-.create-season-button {
+.competition-page > button {
     background-color: var(--clr-green);
     color: var(--clr-white);
     font-size: 1.7rem;
@@ -36,83 +29,7 @@
     margin: 35px 0;
 }
 
-.season-card {
-    width: 1600px;
-    height: 700px;
-    margin-bottom: 100px;
-}
-
-.season-display {
-    width: 1350px;
-    height: 100%;
-    display: grid;
-    grid-template-rows: 100px 1fr;
-}
-
-.season-participant-display {
-    grid-column: 1;
-}
-
-.season-podium-place,
-.card-legend {
-    display: grid;
-    grid-template-columns: 350px 1fr 200px;
-}
-.card-legend {
-    height: 100px;
-}
-
-.season-rounds,
-.season-breakdown {
-    grid-column: 2;
-    display: flex;
-    gap: 20px;
-}
-
-.season-round,
-.participant-round-placement,
-.round-team,
-.round-score {
+.round-breakdown h4 {
     width: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
     text-align: center;
-}
-
-.participant-round-placement,
-.round-team,
-.round-score {
-    font-size: 2rem;
-    font-weight: normal;
-    text-align: left;
-    width: fit-content;
-}
-
-.season-round * {
-    overflow-y: hidden;
-}
-
-.season-round > h3 {
-    height: 75px;
-}
-
-.season-round h3 {
-    font-size: 2rem;
-}
-
-.participant-score {
-    display: grid;
-    grid-template-columns: 100px 1fr;
-    align-items: center;
-}
-
-.round-legend {
-    align-items: end;
-
-}
-
-.round-legend h3 {
-    font-size: 2rem;
 }
