--- a/src/client/components/styling/homepage.css
+++ b/src/client/components/styling/homepage.css
@@ -9,7 +9,7 @@
     flex-direction: column;
 }
 
-.app-homepage button {
+.app button {
     padding: 20px 50px;
     border-radius: 10px;
     border: none;
@@ -18,16 +18,15 @@
     text-transform: uppercase;
 }
 
+.app button:hover {
+    text-shadow: 0 0 5px var(--clr-white);
+}
+
 .create-competition-button {
     color: var(--clr-white);
     background-color: var(--clr-pink);
     font-size: 1.7rem;
     font-weight: 400;
-}
-
-.create-competition-button:hover,
-.create-season-button:hover {
-    text-shadow: 0 0 5px var(--clr-white);
 }
 
 .competition-display {
@@ -40,55 +39,4 @@
     grid-template-columns: repeat(auto-fill, 800px);
     gap: 100px;
     justify-content: center;
-}
-
-.card-display {
-    padding: 20px;
-    display: grid;
-    grid-template-rows: 1fr 345px;
-}
-
-.card-display h3 {
-    color: var(--clr-grey-1);
-    font-size: 3rem;
-    font-weight: 300;
-}
-
-.card-podium {
-    display: grid;
-    grid-auto-rows: 100px;
-    gap: 10px;
-}
-
-.podium-place {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 100px;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.5rem;
-}
-
-.podium-place .participant-display {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-
-.podium-place .participant-img {
-    border: 1px solid var(--clr-black-1);
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-}
-
-.podium-place .participant-name {
-    color: var(--clr-black-2);
-    font-size: 2.5rem;
-}
-
-
-.podium-place .participant-nationality {
-    color: var(--clr-grey-1);
-    font-size: 1.5rem;
 }
