refactor css for welcome page and its forms

--- a/src/client/components/styling/search-leaderboard.css
+++ b/src/client/components/styling/search-leaderboard.css
@@ -1,5 +1,6 @@
 .search-leaderboard-form {
     width: 40rem;
+    z-index: 1;
 }
 
 .search-leaderboard-form-input {
@@ -7,5 +8,7 @@
     height: 4rem;
     text-align: center;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    background-color: var(--clr-grey-2);
 }
