--- a/src/client/App.css
+++ b/src/client/App.css
@@ -8,3 +8,16 @@
 .router-link {
     text-decoration: none;
 }
+
+.app button {
+    padding: 20px 50px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.2s;
+    text-transform: uppercase;
+}
+
+.app button:hover {
+    text-shadow: 0 0 5px var(--clr-white);
+}
