--- a/src/client/components/styling/login.css
+++ b/src/client/components/styling/login.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     background: rgba(207, 216, 220, 0.75);
+    z-index: 2;
 }
 
 .login-aside {
