--- a/src/client/components/styling/header.css
+++ b/src/client/components/styling/header.css
@@ -29,6 +29,19 @@
 .header-profile {
     position: absolute;
     right: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.header-logout-button {
+    background-color: var(--clr-grey-2);
+    border: none;
+    height: 2rem;
+    width: 4rem;
+    border-radius: 0.25rem;
+    font-size: 1rem;
 }
 
 .app-header h2 {
