--- a/src/client/components/styling/card-tag.css
+++ b/src/client/components/styling/card-tag.css
@@ -7,7 +7,7 @@
 .tag-container {
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
     height: 100%;
     padding: 50px 20px 20px 20px;
