--- a/src/client/components/styling/register.css
+++ b/src/client/components/styling/register.css
@@ -38,7 +38,7 @@
 .welcomeform-close-button {
     height: fit-content;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 0 10px;
 }
 
