--- a/src/client/components/styling/competition.css
+++ b/src/client/components/styling/competition.css
@@ -17,7 +17,8 @@
 .season-page > h2 {
     font-size: 2.5rem;
     font-weight: 300;
-    color: var(--clr-black-2)
+    color: var(--clr-black-2);
+    margin-bottom: 1.5rem;
 }
 
 .competition-page > button {
