--- a/src/client/components/styling/competitors.css
+++ b/src/client/components/styling/competitors.css
@@ -1,23 +1,52 @@
 .competitor-form {
-  border: 1px solid black;
-  display: flex;
+  border-radius: 2rem;
+  display: grid;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
+.competitor-form > h3 {
+  margin-bottom: 1rem;
+}
+
+.input-field {
+  margin-top: 1rem;
+}
+
 button.submit-competitor {
   background: gray;
+  color: whitesmoke;
+  margin-top: 2rem;
 }
 
 button.submit-completed-competition {
   background: gray;
+  color: whitesmoke;
   justify-content: center;
   margin-top: 5rem;
   align-self: center;
   margin-left: 1rem;
+}
+
+.competition-form {
+  display: grid;
+  background-color: var(--clr-blue);
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.input-field {
+  height: 1.8rem;
+  width: 15rem;
+  border-radius: 1rem;
+}
+
+.comp-form > h2 {
+  margin-bottom: 1rem;
 }
 
 .comp-form {
