--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,6 +1,8 @@
 .app {
     width: 100%;
+    height: 100vh;
     min-height: 100vh;
+    
     background-color: var(--clr-grey-2);
     padding-top: 5rem;
 }
