--- a/src/client/components/styling/competition.css
+++ b/src/client/components/styling/competition.css
@@ -8,13 +8,15 @@
 }
 
 .competition-page > h1,
-.season-page > h1 {
+.season-page > h1,
+.create-season h1 {
     font-size: 5rem;
     font-weight: 400;
 }
 
 .competition-page > h2,
-.season-page > h2 {
+.season-page > h2,
+.create-season h2 {
     font-size: 2.5rem;
     font-weight: 300;
     color: var(--clr-black-2)
