--- a/src/client/components/styling/homepage.css
+++ b/src/client/components/styling/homepage.css
@@ -4,7 +4,7 @@
     padding-top: 3rem;
 
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     flex-direction: column;
 }
