round cards rendered

--- a/src/client/components/styling/card.css
+++ b/src/client/components/styling/card.css
@@ -116,10 +116,15 @@
     display: grid;
     grid-template-columns: 100px 1fr;
     align-items: center;
+    text-align: center;
 }
 
 .round-breakdown {
     width: 100%;
     display: flex;
     gap: 20px;
+}
+
+.team-score {
+    text-align: center;
 }
