--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,6 +1,6 @@
 .app {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     min-height: 100vh;
     
     background-color: var(--clr-grey-2);
