--- a/src/client/components/styling/season.css
+++ b/src/client/components/styling/season.css
@@ -10,4 +10,13 @@
     border: none;
     cursor: pointer;
     text-transform: uppercase;
-};
+}
+
+.season-page button {
+    background-color: var(--clr-blue);
+    font-size: 1.5rem;
+}
+
+.season-page select {
+    background-color: var(--clr-white);
+}
